Add alt tag to headshot image

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <html>
     <h1>Student Bio</h1>
     <h2>Julian Acosta</h2>
-    <img src="julianHeadshot.jpg" height="15%" width="15%">
+    <img src="julianHeadshot.jpg" alt="Julian Acosta headshot" height="15%" width="15%">
     <p>I'm a technical project manager with marketing agnecy experience. In my free time I like to make music, play video games, and watch movies.</p>
     <h2>Contact Info</h2>
     <ul>
